<resources>
    <string name="app_name">RecycleMe</string>
    <string name="logo">RecycleMe</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegister">Register</string>
    <string name="welcome">Welcome!</string>
    <string name="paragraph">Yuk, mulai segera kegiatan daur ulang kamu dan hijaukan kembali lingkunganmu.</string>
    <string name="logo_login">Vector Recycler</string>
    <string name="yuk_login_dulu">Yuk, segera login</string>
    <string name="login_description">Supaya kamu bisa bergabung dengan yang lain dan membantu menghijaukan lingkunganmu.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="logo_sign_up">Kid doing recycler</string>
    <string name="signup_title">Yuk, gabung dengan kami</string>
    <string name="register_description">Bantu generasi selanjutnya supaya bisa mendapatkan kehidupan yang bersih dan nyaman.</string>
    <string name="nama">Name</string>
    <string name="hintNama">Name</string>
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Password</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Article</string>
    <string name="title_dashboard">Recycling</string>
    <string name="title_notifications">Scan</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_profile">Profile</string>
    <string name="title_favorite">Favorite</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone_name">Nama HP</string>
    <string name="description">Deskripsi</string>
    <string-array name="data_name">
        <item>Asus ROG Phone 6 Series</item>
        <item>Asus Zenfone 9</item>
        <item>Infinix Zero 5G 2023</item>
        <item>Poco M5</item>
        <item>iPhone 14 Pro/ Pro Max</item>
        <item>Samsung Galaxy A54 5G</item>
        <item>Samsung Galaxy S21 FE</item>
        <item>Samsung Galaxy S23 Ultra</item>
        <item>Samsung Galaxy Z Flip 4</item>
        <item>Vivo V23 5G</item>
    </string-array>
    <string name="upload">Cek Hasil Daur Ulang</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description_recycling">Deskripsikan hasil daur ulang kamu</string>
    <string name="description_image">Image</string>
    <string name="slide_title">Title</string>
    <string name="slide_description">Description</string>
</resources>