<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageSlideIcon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/description_image"/>

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slide_title"
        android:fontFamily="@font/nexa"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/open_sans"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/slide_description"
        android:textSize="15sp"/>

</LinearLayout>